--- a/app/templates/contact.tpl.html
+++ b/app/templates/contact.tpl.html
@@ -1,3 +1,7 @@
-<form>
-  <input type='text' placeholder='E-mail address'/>
-</form>
+  <h2>Ask the Lan Party!</h2>
+
+  <form>
+    <input type='text' placeholder='Your name'/>
+    <input type='text' placeholder='E-mail address'/>
+    <textarea name="textarea" rows="10" cols="50" placeholder='Please enter your message'></textarea>
+  </form>
