--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -18,16 +18,16 @@
     <input placeholder="Search Term" ng-model="query">
     <button>Search</button>
   </form>
-  
+  </nav>
   <hr>
 
  <ul class="side-nav">
-  <li><a href="#"></a>Xbox One</li>
-  <li><a href="#"></a>PS4</li>
-  <li><a href="#"></a>PC</li>
+  <li><a href="#/XboxOne">Xbox One</a></li>
+  <li><a href="#/PS4">PS4</a></li>
+  <li><a href="#/PC">PC</a></li>
   </ul>
 
-</nav>
+
 
 
 
