Put in edit form

--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -21,10 +21,8 @@
   </nav>
   <hr>
 
- <ul class="side-nav">
-  <li><a href="#/XboxOne">Xbox One</a></li>
-  <li><a href="#/PS4">PS4</a></li>
-  <li><a href="#/PC">PC</a></li>
+  <ul class="side-nav">
+   <li><a href="#/Add">Add a Game</a></li>
   </ul>
 
 
