--- a/app/templates/single.tpl.html
+++ b/app/templates/single.tpl.html
@@ -4,3 +4,6 @@
 
 <p>{{singleGame.rating}}</p>
 <p>Available Platforms: <span>{{singleGame.platform}}</span></p>
+
+<a href="#/Edit/{{ singleGame.objectId }}">Update Game Information</a> 
+
