--- a/app/templates/about.tpl.html
+++ b/app/templates/about.tpl.html
@@ -1,6 +1,9 @@
-<h3>About</h3>
 
-<p>
+<div class='mainPage'>
+
+<img class='gaming' src="../images/gaming.png">
+
+<p class='about'>
 Your friend is quite a mercenary. I wonder if he really cares about anything...or anyone. I care! So...what do you think of her, Han? I'm trying not to, kid! Good... Still, she's got a lot of spirit. I don't know, what do you think? Do you think a princess and a guy like me... No!
 
 Are they away? They have just made the jump into hyperspace. You're sure the homing beacon is secure aboard their ship? I'm taking an awful risk, Vader. This had better work.
@@ -11,3 +14,4 @@ You're safe! We had feared the worst. When we heard about Alderaan, we were afra
 
 Hey...hey, open the pressure maintenance hatch on unit number... where are we? Three-two-six-eight-two-seven. If we can just avoid any more female advice, we ought to be able to get out of here. Well, let's get moving! Where are you going? No, wait. They'll hear! Come here, you big coward! Chewie! Come here! Listen. I don't know who you are, or where you came from, but from now on, you do as I tell you. Okay? Look, Your Worshipfulness, let's get one thing straight! I take orders from one person! Me! It's a wonder you're still alive. Will somebody get this big walking carpet out of my way? No reward is worth this.
 </p>
+</div>
