--- a/app/templates/add.tpl.html
+++ b/app/templates/add.tpl.html
@@ -1,3 +1,5 @@
+
+<div class='mainPage addPage'>
 <h3>Add</h3>
 
 <form ng-submit='addGame(newGame)'>
@@ -5,5 +7,6 @@
   <input placeholder='Game Title' ng-model='newGame.title'>
   <input placeholder='Game Mature Rating' ng-model='newGame.rating'>
   <input placeholder='Available Platforms' ng-model='newGame.platform'>
-  <button>Add Game</button>
+  <button class='addGameBtn'>Add Game</button>
 </form>
+</div>
