--- a/app/templates/edit.tpl.html
+++ b/app/templates/edit.tpl.html
@@ -1,3 +1,5 @@
+
+<div class='mainPage updatePage'>
 <h2>Update Game Information</h2>
 
 <form ng-submit="updateGame(singleGame)">
@@ -7,3 +9,4 @@
   <input ng-model="singleGame.platform">
   <button>Update</button>
 </form>
+</div>
