--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -1,25 +1,28 @@
-<nav class="top-bar" data-topbar role="navigation">
+<header>
+  <nav class="top-bar" data-topbar role="navigation">
 
-  <ul class="title-area">
-    <li class="name">
-      <h1 class='logo'>LAN Party</h1>
-    </li>
-  </ul>
-
-  <section class="top-bar-section">
-    <ul class="right">
-      <li><a href="#/">Home</a></li>
-      <li><a href="#/About">About</a></li>
-      <li><a href="#/Contact">Contact</a></li>
+    <ul class="title-area">
+      <li class="name">
+        <img class='lanLogo' src='../images/lanlogo.png'>
+      </li>
     </ul>
-  </section>
 
-  <form ng-submit="search(query)" class='searchForm'>
-    <input placeholder="Search Term" ng-model="query">
-    <button>Search</button>
-  </form>
-  </nav>
-  <hr>
+    <section class="top-bar-section">
+      <ul class="right">
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/About">About</a></li>
+        <li><a href="#/Contact">Contact</a></li>
+      </ul>
+    </section>
+
+<!--     <div class='searchBar'>
+      <form ng-submit="search(query)" class='searchForm'>
+        <input placeholder="Search Term" ng-model="query">
+        <button class='searchBtn'>Search</button>
+      </form>
+    </div>
+  </nav> -->
+</header>
 
   <ul class="side-nav">
    <li><a href="#/Add">Add a Game</a></li>
