--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,10 @@
 @import 'neat';
 
 // Cherry Bomb Colors
+$redRoddy: #FF081B;
 $greyDark: #212021;
+$greyBaltic: #3E3E3E;
+$greyConcord: #7D7D7D;
 
 body {
   @include outer-container;
@@ -14,15 +17,45 @@ body {
   margin-right: 0;
   max-width: 100%;
 
+  p {
+    font-size: 20px;
+  }
+
+  .container {
+    margin: 15px auto;
+  
+    li {
+      cursor: pointer;
+    }
+  }
 
   ///////////// top navigation area ///////////
 
-  .searchForm {
+  header {
+    background: #2F302F;
+    position: fixed;
+    top: -8px;
     width: 100%;
   }
 
-  h1.logo {
-    color: #fff;
+  .top-bar {
+    height: 131px;
+
+    .lanLogo {
+      width: 50%;
+      margin-left: 2%;
+      margin-top: 4%;
+    }
+
+    .searchForm {
+      width: 50%;
+    }
+
+    .top-bar-section {
+      margin-top: 80px;
+      margin-right: 1%;
+    }
+
   }
 
   //////////// side navigation area /////////////
@@ -31,21 +64,130 @@ body {
     @include span-columns(3);
     color: #fff;
     background: $greyDark;
+    position: fixed;
+    left: 0;
+    top: 270px;
+    bottom: 242px;
+    padding: 10px;
+    position: fixed;
+    width: 130px;
+    height: 55px;
   }
 
-  .container {
-    margin: 15px auto;
+  .side-nav li a:not(.button) {
+    color: #fff;
   }
 
-  li {
-    cursor: pointer;
+  .side-nav li a:not(.button):hover {
+    color: $redRoddy;
   }
 
-  .imageGallery {
-    @include span-columns(3);
-    @include omega(6n);
+  ///////////////// Main Page Area ////////////////////
+
+  .mainPage {
+    margin-left: 20%;
+    margin-top: 15%;
+
+    .falloutTitle {
+      margin-left: 16%;
+    }
+
+    .youtubeVid {
+      margin-top: 2%;
+      margin-left: 12%;
+    }
+
+    .lan {
+      margin-left: 1%;
+      color: $redRoddy;
+    }
+
+    .imageGallery {
+      height: 125px;
+      width: 221px;
+      overflow: hidden;
+      display: inline-block;
+
+      .thumbnail {
+        margin-left: 5%;
+      }
+
+      img.thumbnail:hover {
+        color: $greyConcord;
+      }
+    }
+  }
+
+  /////////////////// Single Game Page ////////////////////
+
+    .singleContainer {
+      margin-left: 25%;
+      margin-top: 15%;
+
+      .singleTitle {
+        color: $redRoddy;
+      }
+
+      .singleImage {
+        width: 60%;
+        margin-bottom: 5%;
+      }
+
+      .update {
+        color: $redRoddy;
+        background: $greyDark;
+      }
+
+      .update:hover {
+        color: #fff;
+      }
 
   }
+
+  /////////////////// About Page ////////////////////
+
+  .gaming {
+    height: 200px;
+    margin-left: 5%;
+  }
+
+  .about {
+    margin-top: 5%;
+    width: 80%;
+    font-size: 16px;
+  }
+
+  ////////////////// Contact Page ///////////////////
+
+  .contactPage {
+    margin-top: 15%;
+    width: 70%;
+  }
+
+  ////////////////// Add Page ///////////////////////
+
+  .addPage {
+    margin-top: 15%;
+    width: 70%;
+
+    p span .rating {
+      color: $redRoddy;
+    }
+
+    .addGameBtn {
+      background: $greyConcord;
+    }
+  }
+
+  ////////////////// Update Page /////////////////////
+
+  .updatePage {
+    margin-top: 15%;
+    width: 70%;
+  }
+
+
+
 }
 
 
